# emulator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
doc/: .#diagrams.org  diagrams.org  diagrams.tex
if/: ExecutionBlockIf.hxx  RegisterBlockIf.hxx
inc/: ExecutionBlock.hxx  ExecutionBlockBus.hxx  RegisterBlock.hxx  RegisterBlockBus.hxx  WhichEnums.hxx
include/: ArithExecBlock.hxx  BranchBlock.hxx  Core.hxx  CtrlBlock.hxx  CtrlRegsBlock.hxx  ExecutionBlockBus.hxx  ExecutionBlockIf.hxx  FSM.hxx  MMIODeviceIf.hxx  MTUResourceBlock.hxx  MemoryExeBlock.hxx  PeripherialBus.hxx  RegfileResourceBlock.hxx  ResourceBlockBus.hxx  ResourceBlockIf.hxx  SystemMemory.hxx
main/: CMakeLists.txt  main.cxx
src/: ArithExecBlock.cxx  BranchBlock.cxx  CMakeLists.txt  Core.cxx  CtrlBlock.cxx  CtrlRegsBlock.cxx  ExecutionBlock.cxx  ExecutionBlockBus.cxx  ExecutionBlockIf.cxx  FSM.cxx  MTUResourceBlock.cxx  MemoryExecutionBlock.cxx  PeripherialBus.cxx  RegfileResourceBlock.cxx  ResourceBlockBus.cxx  ResourceBlockIf.cxx  SystemMemory.cxx
test/: CMakeLists.txt
test/testBlockBus/: CMakeLists.txt
test/testBlockBus/include/: MockExecBlock.hxx
test/testBlockBus/src/: testExecutionBlockBus.cxx
test/testComponent/: CMakeLists.txt
test/testComponent/include/: README
test/testComponent/src/: README
test/testExecBlocks/: CMakeLists.txt
test/testExecBlocks/include/: MockResourceBlockBus.hxx
test/testExecBlocks/src/: testArithBlock.cxx
test/testMemoryExeBlock/: CMakeLists.txt
test/testMtuBlock/: CMakeLists.txt  testMtuBlock.cxx
